Realisation de l'archivage
